mini-project/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: odds-shopapi
  namespace: odds-shop 
spec:
  selector:
    app: odds-shopapi
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: odds-shopweb
  namespace: odds-shop 
spec:
  selector:
    app: odds-shopweb
  ports:
  - port: 3000
    targetPort: 8080
    protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: odds-shopgw
  namespace: odds-shop 
spec:
  selector:
    app: odds-shopgw
  ports:
  - port: 8800
    targetPort: 80
    protocol: TCP
