mini-project/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: odds-shop-ingress
  namespace: odds-shop
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - '*.odds.team'
    secretName: odds-tls
  rules:
  - host: www.odds-shop.team
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: odds-shopweb
            port:
              number: 3000
          
  - host: api.odds-shop.team
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: odds-shopgw
            port:
              number: 80
